use getLast()